update, TransactionList: - fixed sorting on mobile devices

--- a/src/styles/components/table/_table.scss
+++ b/src/styles/components/table/_table.scss
@@ -78,6 +78,10 @@
 								}
 						}
 				}
+				&-action{
+					display: flex;
+					align-items: center;
+				}
 				&-datepicker{
 					display: inline-flex;
 					align-items: center;
